--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -5,25 +5,31 @@
 <div class="mb-5">
   <h1>Все посты пользователя: {{ author.get_full_name }} </h1>
   <h3>Всего постов: {{ author.posts.count }}</h3>
-  {% if author == request.user %}
-    <i>... Это Ваша страница с Вашими сообщениями ... Подписка недоступна)))</i> <hr>
-  {% elif following == 2 %}
-  <i>Подписка недоступна! Сначала зарегистрируйтесь!</i> <hr>  
-  {% elif following == 1 %}
-    <a
-      class="btn btn-lg btn-light"
-      href="{% url 'posts:profile_unfollow' author.username %}" role="button"
-    >
-      Отписаться
-    </a>
+  {% if user.is_authenticated %}
+    {% if author == request.user %}
+      <i>... Это Ваша страница с Вашими сообщениями ... Подписка недоступна)))</i> <hr>
+    {% else %}
+      {% if following %}
+        <a
+          class="btn btn-lg btn-light"
+          href="{% url 'posts:profile_unfollow' author.username %}" role="button"
+        >
+          Отписаться
+        </a>
+      {% else %}
+          <a
+            class="btn btn-lg btn-primary"
+            href="{% url 'posts:profile_follow' author.username %}" role="button"
+          >
+            Подписаться
+          </a>
+      {% endif %}
+    {% endif %}  
   {% else %}
-      <a
-        class="btn btn-lg btn-primary"
-        href="{% url 'posts:profile_follow' author.username %}" role="button"
-      >
-        Подписаться
-      </a>
-   {% endif %}
+  <i>Подписка доступна только зарегистрированным пользователям!</i>
+  <i>Зарегистрируйтесь!</i>
+  <hr>
+  {% endif %}
 <div/>
 <article>
   {% for post in page_obj %}
